switch back to inline for chromium 68/72 layout issues

--- a/packages/ui/Marquee/Marquee.module.less
+++ b/packages/ui/Marquee/Marquee.module.less
@@ -38,7 +38,7 @@
 		}
 
 		.spacing {
-			display: inline-block;
+			display: inline;
 			padding-left: calc(1px * (var(--ui-marquee-spacing, 0) + var(--ui-marquee-offset, 0)));
 
 			&.rtl {
